# edaio

./: .env  CHANGELOG.md  LICENSE  README.md  hello.py  pyproject.toml  test_real_data.py
.github/: dependabot.yml
.github/workflows/: publish.yml  test-publish.yml
src/edaio/: __init__.py  cli.py  core.py  report.py  stats.py  suggestions.py
tests/: conftest.py  test_core.py
