[project]
name = "edaio"
version = "0.5.2"
description = "Lightning-fast DataFrame introspection with smart red-flag suggestions"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0.0"]
plotly = ["plotly>=5.0.0"]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
edaio = "edaio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edaio"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N"]

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["src"]
addopts = "-v --tb=short"